fixed all issuses

--- a/kalima-platform/frontend/public/locales/ar/admin.json
+++ b/kalima-platform/frontend/public/locales/ar/admin.json
@@ -199,12 +199,23 @@
       "of": "من"
     },
     "confirmDelete": "هل أنت متأكد من رغبتك في حذف هذا المستخدم؟",
+    "deleteSuccess": "تم حذف المستخدم بنجاح",
+    "deleteError": "فشل في حذف المستخدم",
+    "createSuccess": "تم إنشاء المستخدم بنجاح",
+    "createError": "فشل في إنشاء المستخدم",
+    "editSuccess": "تم تعديل المستخدم بنجاح",
+    "editError": "فشل في تعديل المستخدم",
     "NA": "غير متوفر",
 
     "auditlog": {
       "title": "سجل العمليات",
       "subtitle": "عرض وتتبع جميع الأنشطة على النظام",
-      "search": "البحث في سجل العمليات...",
+      "search": {
+        "enterEmail": "يرجى إدخال البريد الإلكتروني للبحث",
+        "found": "تم العثور على {{count}} سجل",
+        "noResults": "لا توجد سجلات لهذا البريد الإلكتروني",
+        "error": "حدث خطأ أثناء البحث"
+      },
       "noRecords": "لا توجد سجلات متاحة",
       "noRecordsFiltered": "لا توجد سجلات عمليات تطابق المرشحات الحالية. جرب تعديل معايير البحث.",
       "noRecordsYet": "لم يتم تسجيل أي سجلات عمليات بعد. ستظهر الأنشطة هنا بمجرد بدء المستخدمين التفاعل مع النظام.",
