--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -68,6 +68,8 @@
   "ConfirmedOrdersReport":"تقرير الاداء",
   "market": "المتجر",
   "signedLecturers": "المحاضرين الموقعين",
-  "Analytics": "التحليلات"
+  "Analytics": "التحليلات",
+  "performanceReport": "تقرير الأداء",
+  "analyticsDashboard": "لوحة التحليلات"
 
   }
