--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
@@ -53,9 +53,11 @@
     "by": "بواسطة",
     "book": "كتاب",
     "productType": "منتج",
+    "productSerial": "الرقم التسلسلي للمنتج",
     "viewDetails": "عرض التفاصيل",
     "viewEditNotes": "عرض/تعديل الملاحظات",
-    "addNotes": "إضافة ملاحظات",
+    "addNotes": "إضافة ملاحظة",
+    "editNotes": "تعديل الملاحظات",
     "viewPaymentScreenshot": "عرض صورة الدفع",
     "contactWhatsApp": "التواصل عبر واتساب",
     "confirmOrder": "تأكيد الطلب",
@@ -109,11 +111,16 @@
   "alerts": {
     "orderConfirmed": "تم تأكيد الطلب بنجاح!",
     "orderReceived": "تم استلام الطلب بنجاح!",
+    "orderReturnSuccess": "تم استرجاع الطلب بنجاح",
+    "orderReturnFailed": "فشل في استرجاع الطلب",
+    "orderReconfirmed": "تم إعادة تأكيد الطلب",
+    "orderReconfirmFailed": "فشل إعادة التأكيد",
+    "orderAlreadyConfirmedOrInvalidState": "الطلب مؤكد بالفعل أو في حالة غير صالحة",
     "exportSuccess": "تم تصدير الطلبات بنجاح!",
     "exportFailed": "فشل في تصدير الطلبات",
     "failedToConfirm": "فشل في تأكيد الطلب: ",
     "notesSaved": "تم حفظ الملاحظات بنجاح!",
-    "failedToSaveNotes": "فشل في حفظ الملاحظات: ",
+    "failedToSaveNotes": "فشل في حذف الملاحظات: ",
     "unsavedChanges": "لديك تغييرات غير محفوظة. هل أنت متأكد من أنك تريد الإغلاق؟",
     "confirmDeleteOrder": "هل أنت متأكد من أنك تريد حذف هذا الطلب؟",
     "orderDeleted": "تم حذف الطلب بنجاح!",
