--- a/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
@@ -47,9 +47,11 @@
     "by": "by",
     "book": "Book",
     "productType": "Product",
+    "productSerial": "Product Serial",
     "viewDetails": "View Details",
     "viewEditNotes": "View/Edit Notes",
-    "addNotes": "Add Notes",
+    "addNotes": "Add Note",
+    "editNotes": "Edit Notes",
     "viewPaymentScreenshot": "View Payment Screenshot",
     "contactWhatsApp": "Contact via WhatsApp",
     "confirmOrder": "Confirm Order",
