--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-Cart.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-Cart.json
@@ -46,6 +46,7 @@
     "invalidCoupon": "رمز الخصم غير صحيح. يرجى التحقق والمحاولة مرة أخرى.",
     "applyCouponFailed": "فشل تطبيق رمز الخصم. يرجى المحاولة مرة أخرى.",
     "noTransferNumber": "رقم التحويل مطلوب. يرجى إدخال الرقم الذي قمت بالتحويل منه.",
+    "invalidTransferNumberLength": "رقم التحويل يجب أن يتكون من 11 رقم",
     "noFileSelected": "لقطة شاشة الدفع مطلوبة. يرجى رفع لقطة شاشة للدفع.",
     "fillBookFields": "يرجى ملء جميع تفاصيل الكتاب",
     "nameOnBookRequired": "الاسم على الكتاب مطلوب",
