--- a/kalima-platform/frontend/public/locales/en/admin.json
+++ b/kalima-platform/frontend/public/locales/en/admin.json
@@ -189,12 +189,23 @@
       "of": "of"
     },
     "confirmDelete": "Are you sure you want to delete this user?",
+    "deleteSuccess": "User deleted successfully",
+    "deleteError": "Failed to delete user",
+    "createSuccess": "User created successfully",
+    "createError": "Failed to create user",
+    "editSuccess": "User updated successfully",
+    "editError": "Failed to update user",
     "NA": "N/A",
 
     "auditlog": {
       "title": "Audit Log",
       "subtitle": "View and track all system activities",
-      "search": "Search audit logs...",
+      "search": {
+        "enterEmail": "Please enter an email to search",
+        "found": "Found {{count}} records",
+        "noResults": "No records found for this email",
+        "error": "Error occurred while searching"
+      },
       "noRecords": "No records available",
       "noRecordsFiltered": "No audit logs match your current filters. Try adjusting your search criteria.",
       "noRecordsYet": "No audit logs have been recorded yet. Activity will appear here once users start interacting with the system.",
