--- a/kalima-platform/frontend/public/locales/en/admin.json
+++ b/kalima-platform/frontend/public/locales/en/admin.json
@@ -1,28 +1,28 @@
 {
-    "admin": {
-      "pageTitle": "Admin Page",
-      "students": "Students",
-      "teachers": "Teachers",
-      "assistants": "Assistants",
-      "parents": "Parents",
-      "sendOffer": "Send Your Offer Now!",
-      "generatePromoCodes": "Generate Promo Codes",
-      "promo": "Promo Code",
-      "discount": "Discount",
-       "editUser": {
-        "title": "Edit User",
-        "name": "Name",
-        "namePlaceholder": "Name",
-        "phone": "Phone Number",
-        "phonePlaceholder": "Phone Number",
-        "email": "Email",
-        "password": "Password",
-        "passwordPlaceholder": "Password",
-        "passwordHint": "Please enter password",
-        "save": "Save",
-        "cancel": "Cancel"
-      },
-      "userDetails": {
+  "admin": {
+    "pageTitle": "Admin Page",
+    "students": "Students",
+    "teachers": "Teachers",
+    "assistants": "Assistants",
+    "parents": "Parents",
+    "sendOffer": "Send Your Offer Now!",
+    "generatePromoCodes": "Generate Promo Codes",
+    "promo": "Promo Code",
+    "discount": "Discount",
+    "editUser": {
+      "title": "Edit User",
+      "name": "Name",
+      "namePlaceholder": "Name",
+      "phone": "Phone Number",
+      "phonePlaceholder": "Phone Number",
+      "email": "Email",
+      "password": "Password",
+      "passwordPlaceholder": "Password",
+      "passwordHint": "Please enter password",
+      "save": "Save",
+      "cancel": "Cancel"
+    },
+    "userDetails": {
       "name": "Name",
       "email": "Email",
       "gender": "Gender",
@@ -59,7 +59,11 @@
       "assistantInfo": "Assistant Information",
       "assignedLecturer": "Assigned Lecturer",
       "title": "User Details",
-      "close": "Close"
+      "close": "Close",
+      "purchases": "Purchases",
+      "frequentBuyer": "Frequent Buyer",
+      "newClient": "New Client",
+      "userSerial": "User Serial"
     },
     "invites": {
       "invite": "Invite",
@@ -71,63 +75,70 @@
     },
     "yes": "Yes",
     "no": "No",
-"actions": {
-  "delete": "Delete",
-  "edit": "Edit",
-  "cancel": "Cancel",
-  "whatsapp": "Send WhatsApp message",
-  "viewDetails": "View Details"
-},
-      "export": {
-        "export": "Export",
-        "exporting": "Exporting...",
-        "csvFormat": "CSV Format",
-        "jsonFormat": "JSON Format",
-        "exportFiltered": "Export Filtered",
-        "exportCSVPage": "Export Page (CSV)",
-        "exportCSVAll": "Export All (CSV)",
-        "exportJSONPage": "Export Page (JSON)",
-        "exportJSONAll": "Export All (JSON)",
-        "exportXLSXPage": "Export Page (XLSX)",
-        "exportXLSXAll": "Export All (XLSX)"
-      },
-      "errors": {
-        "fetchLecturers": "Failed to fetch lecturers",
-        "pointsError": "Points amount must be greater than zero",
-        "codesError": "Number of codes must be greater than zero",
-        "phoneRequired": "Please enter phone number",
-        "lecturerRequired": "Please select a lecturer",
-       "generationFailed": "Failed to generate promo codes",
-       "fetchUsers": "Failed to fetch users"
-      
-      },
-      "success": {
-        "codesGenerated": "Promo codes generated successfully"
-      },
-      "form": {
-        "pointsAmount": "Points Amount",
-        "numCodes": "Number of Codes",
-        "codeType": "Code Type",
-        "general": "General",
-        "specific": "Specific",
-        "promo": "Promo",
-        "lecturer": "Lecturer",
-        "lecturerPlaceholder": "Select Lecturer",
-        "generateQrCodes": "Generate QR Codes",
-        "qrCodeDescription": "Generate QR codes for easy code redemption",
-        "qrCodeSize": "QR Code Size"
-      },
-      "printQrCodes": "Print QR Codes",
-      "downloadAllQrCodes": "Download All QR Codes",
-      "points": "Points",
-      "userManagement": {
-        "title": "User Actions Log",
-        "subtitle": "Manage and export user data",
-        "createUser": "Create New User",
-        "delete": "Delete",
-        "edit": "Edit"
-      },
-      "whatsappModal": {
+    "actions": {
+      "delete": "Delete",
+      "edit": "Edit",
+      "cancel": "Cancel",
+      "whatsapp": "Send WhatsApp message",
+      "viewDetails": "View Details"
+    },
+    "export": {
+      "export": "Export",
+      "exporting": "Exporting...",
+      "csvFormat": "CSV Format",
+      "jsonFormat": "JSON Format",
+      "xlsxFormat": "XLSX Format",
+      "exportFiltered": "Export Filtered",
+      "exportCSVPage": "Export Page (CSV)",
+      "exportCSVAll": "Export All (CSV)",
+      "exportJSONPage": "Export Page (JSON)",
+      "exportJSONAll": "Export All (JSON)",
+      "exportXLSXPage": "Export Page (XLSX)",
+      "exportXLSXAll": "Export All (XLSX)",
+      "csvPage": "Export Page (CSV)",
+      "csvAll": "Export All (CSV)",
+      "jsonPage": "Export Page (JSON)",
+      "jsonAll": "Export All (JSON)",
+      "xlsxPage": "Export Page (XLSX)",
+      "xlsxAll": "Export All (XLSX)",
+      "successXLSX": "Successfully exported {{count}} users (XLSX)"
+    },
+    "errors": {
+      "fetchLecturers": "Failed to fetch lecturers",
+      "pointsError": "Points amount must be greater than zero",
+      "codesError": "Number of codes must be greater than zero",
+      "phoneRequired": "Please enter phone number",
+      "lecturerRequired": "Please select a lecturer",
+      "generationFailed": "Failed to generate promo codes",
+      "fetchUsers": "Failed to fetch users"
+    },
+    "success": {
+      "codesGenerated": "Promo codes generated successfully"
+    },
+    "form": {
+      "pointsAmount": "Points Amount",
+      "numCodes": "Number of Codes",
+      "codeType": "Code Type",
+      "general": "General",
+      "specific": "Specific",
+      "promo": "Promo",
+      "lecturer": "Lecturer",
+      "lecturerPlaceholder": "Select Lecturer",
+      "generateQrCodes": "Generate QR Codes",
+      "qrCodeDescription": "Generate QR codes for easy code redemption",
+      "qrCodeSize": "QR Code Size"
+    },
+    "printQrCodes": "Print QR Codes",
+    "downloadAllQrCodes": "Download All QR Codes",
+    "points": "Points",
+    "userManagement": {
+      "title": "User Actions Log",
+      "subtitle": "Manage and export user data",
+      "createUser": "Create New User",
+      "delete": "Delete",
+      "edit": "Edit"
+    },
+    "whatsappModal": {
       "title": "Send Offer via WhatsApp",
       "phoneLabel": "Phone Number",
       "phonePlaceholder": "Enter phone number",
@@ -135,7 +146,7 @@
       "messagePlaceholder": "Type your message here...",
       "cancel": "Cancel",
       "send": "Send"
-    }, 
+    },
     "generating": "Generating...",
     "generateCodes": "Generate Codes",
     "generatedCodes": "Generated Codes",
@@ -156,7 +167,11 @@
       "phone": "Phone Number",
       "allTypes": "All Types",
       "allStatus": "All Statuses",
-      "invites": "Invites"
+      "invites": "Invites",
+      "dateFrom": "From Date",
+      "dateTo": "To Date",
+      "role": "Role",
+      "status": "Status"
     },
     "roles": {
       "student": "Student",
@@ -180,7 +195,8 @@
       "accountType": "Account Type",
       "phone": "Phone",
       "name": "Name",
-      "successfulInvites": "Successful Invites" 
+      "successfulInvites": "Successful Invites",
+      "purchases": "Purchases"
     },
     "pagination": {
       "previous": "Previous",
@@ -209,7 +225,7 @@
       "noRecords": "No records available",
       "noRecordsFiltered": "No audit logs match your current filters. Try adjusting your search criteria.",
       "noRecordsYet": "No audit logs have been recorded yet. Activity will appear here once users start interacting with the system.",
-      
+
       "filters": {
         "all": "All",
         "user": "User",
@@ -221,9 +237,9 @@
         "to": "to",
         "apply": "Apply Filters",
         "search": "Search audit logs...",
-        "email" : "Email"
+        "email": "Email"
       },
-      
+
       "columns": {
         "user": "User",
         "role": "Role",
@@ -231,9 +247,9 @@
         "resource": "Resource",
         "datetime": "Date/Time",
         "status": "Status",
-        "email" :"Email"
+        "email": "Email"
       },
-      
+
       "roles": {
         "admin": "Admin",
         "subadmin": "Subadmin",
@@ -242,14 +258,14 @@
         "teacher": "Teacher",
         "assistant": "Assistant "
       },
-      
+
       "actions": {
         "create": "Create",
         "read": "Read",
         "update": "Update",
         "delete": "Delete"
       },
-      
+
       "resources": {
         "container": "Course",
         "lecture": "Lesson",
@@ -263,7 +279,7 @@
         "parent": "Parent",
         "package": "Packages",
         "lesson": "Lesson",
-                "ec": {
+        "ec": {
           "purchase": "Purchase"
         }
       },
@@ -274,12 +290,12 @@
         "failed": "Failed",
         "unknown": "Unknown"
       },
-      
+
       "errors": {
         "fetch": "Failed to load audit logs",
         "general": "An error occurred"
       },
-      
+
       "pagination": {
         "previous": "Previous",
         "next": "Next"
@@ -310,55 +326,55 @@
       }
     }
   },
-    "promoCodes": {
-      "title": "Promo Codes Management",
-      "code": "Promo Code",
-      "points": "Points",
-      "status": "Status",
-      "redeemedAt": "Redeemed At",
-      "redeemedBy": "Redeemed By",
-      "noCodes": "No promo codes found",
-      "actions": "Actions"
-    },
-    "filters": {
-      "allStatuses": " All Statuses",
-      "redeemed": " Redeemed",
-      "active": " Active",
-      "redeemedBy": "Redeemed By",
-      "apply":  "Apply Filters",
-      "allStudents": "All Students",
-      "all": "All",
-      "general": "General",
-      "specific": "Specific",
-      "promo": "Promo"
-    },
-    "pagination": {
-      "previous": "Previous",
-      "next": "Next",
-      "page": "Page",
-      "of": "of"
-    },
-    "status": {
-      "redeemed": "Redeemed",
-      "active": "Active"
-    },
-    "errors": {
-      "fetchPromo": "Failed to fetch promo codes"
-    },
-    "revenue" :{
-      "errorLoadingRevenue": "Error loading revenue data",
-      "lecturerRevenue": "Lecturer Revenue",
-      "revenueSummary": "Revenue Summary",
-      "totalRevenue": "Total Revenue",
-      "currency": "EGP",
-      "totalPurchases": "Total Purchases",
-      "monthsWithRevenue": "Months with Revenue",
-      "purchaseCount": "Purchase Count",
-      "noRevenueData": "No revenue data available for this lecturer"
+  "promoCodes": {
+    "title": "Promo Codes Management",
+    "code": "Promo Code",
+    "points": "Points",
+    "status": "Status",
+    "redeemedAt": "Redeemed At",
+    "redeemedBy": "Redeemed By",
+    "noCodes": "No promo codes found",
+    "actions": "Actions"
   },
-  "modals" : {
-        "confirmDelete": "delete this code?",
-        "deleteCodeConfirm": "Are you sure you want to delete this code?"
+  "filters": {
+    "allStatuses": " All Statuses",
+    "redeemed": " Redeemed",
+    "active": " Active",
+    "redeemedBy": "Redeemed By",
+    "apply": "Apply Filters",
+    "allStudents": "All Students",
+    "all": "All",
+    "general": "General",
+    "specific": "Specific",
+    "promo": "Promo"
+  },
+  "pagination": {
+    "previous": "Previous",
+    "next": "Next",
+    "page": "Page",
+    "of": "of"
+  },
+  "status": {
+    "redeemed": "Redeemed",
+    "active": "Active"
+  },
+  "errors": {
+    "fetchPromo": "Failed to fetch promo codes"
+  },
+  "revenue": {
+    "errorLoadingRevenue": "Error loading revenue data",
+    "lecturerRevenue": "Lecturer Revenue",
+    "revenueSummary": "Revenue Summary",
+    "totalRevenue": "Total Revenue",
+    "currency": "EGP",
+    "totalPurchases": "Total Purchases",
+    "monthsWithRevenue": "Months with Revenue",
+    "purchaseCount": "Purchase Count",
+    "noRevenueData": "No revenue data available for this lecturer"
+  },
+  "modals": {
+    "confirmDelete": "delete this code?",
+    "deleteCodeConfirm": "Are you sure you want to delete this code?"
   },
   "noPhoneNumber": "No phone number available",
   "noUsers": "No users found",
@@ -395,8 +411,7 @@
     "government": "Government",
     "administrationZone": "Administration Zone",
     "sequenceId": "Sequence ID",
+    "purchases": "Purchases",
     "joinedDate": "Joined Date"
   }
 }
-
-
