--- a/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
@@ -99,7 +99,16 @@
     "noAdminNotes": "No admin notes added yet",
     "close": "Close",
     "receivedBy": "Received by",
-    "confirmedBy": "Confirmed by"
+    "confirmedBy": "Confirmed by",
+    "new": "New",
+    "newClient": "New Client",
+    "frequentBuyer": "Frequent Buyer",
+    "returnOrder": "Return Order",
+    "return": "Return",
+    "returned": "Returned",
+    "returnedBy": "Returned by",
+    "deleteNotes": "Delete Notes",
+    "totalPurchases": "Total Purchases"
   },
   "alerts": {
     "orderConfirmed": "Order confirmed successfully!",
