--- a/kalima-platform/frontend/public/locales/en/admin.json
+++ b/kalima-platform/frontend/public/locales/en/admin.json
@@ -59,11 +59,7 @@
       "assistantInfo": "Assistant Information",
       "assignedLecturer": "Assigned Lecturer",
       "title": "User Details",
-      "close": "Close",
-      "purchases": "Purchases",
-      "frequentBuyer": "Frequent Buyer",
-      "newClient": "New Client",
-      "userSerial": "User Serial"
+      "close": "Close"
     },
     "invites": {
       "invite": "Invite",
@@ -87,21 +83,13 @@
       "exporting": "Exporting...",
       "csvFormat": "CSV Format",
       "jsonFormat": "JSON Format",
-      "xlsxFormat": "XLSX Format",
       "exportFiltered": "Export Filtered",
       "exportCSVPage": "Export Page (CSV)",
       "exportCSVAll": "Export All (CSV)",
       "exportJSONPage": "Export Page (JSON)",
       "exportJSONAll": "Export All (JSON)",
       "exportXLSXPage": "Export Page (XLSX)",
-      "exportXLSXAll": "Export All (XLSX)",
-      "csvPage": "Export Page (CSV)",
-      "csvAll": "Export All (CSV)",
-      "jsonPage": "Export Page (JSON)",
-      "jsonAll": "Export All (JSON)",
-      "xlsxPage": "Export Page (XLSX)",
-      "xlsxAll": "Export All (XLSX)",
-      "successXLSX": "Successfully exported {{count}} users (XLSX)"
+      "exportXLSXAll": "Export All (XLSX)"
     },
     "errors": {
       "fetchLecturers": "Failed to fetch lecturers",
@@ -167,11 +155,7 @@
       "phone": "Phone Number",
       "allTypes": "All Types",
       "allStatus": "All Statuses",
-      "invites": "Invites",
-      "dateFrom": "From Date",
-      "dateTo": "To Date",
-      "role": "Role",
-      "status": "Status"
+      "invites": "Invites"
     },
     "roles": {
       "student": "Student",
@@ -196,7 +180,8 @@
       "phone": "Phone",
       "name": "Name",
       "successfulInvites": "Successful Invites",
-      "purchases": "Purchases"
+      "purchases": "Purchases",
+      "totalPaid": "Total Paid"
     },
     "pagination": {
       "previous": "Previous",
@@ -414,7 +399,6 @@
     "government": "Government",
     "administrationZone": "Administration Zone",
     "sequenceId": "Sequence ID",
-    "purchases": "Purchases",
     "joinedDate": "Joined Date"
   }
 }
