Reapply "Merge branch 'main' into production"
This reverts commit 71c5a8883ce31e269d888d37a96cbd176b7e3582.

--- a/kalima-platform/frontend/public/locales/ar/admin.json
+++ b/kalima-platform/frontend/public/locales/ar/admin.json
@@ -63,7 +63,11 @@
       "assistantInfo": "معلومات المساعد",
       "assignedLecturer": "المحاضر المعين",
       "title": "تفاصيل المستخدم",
-      "close": "إغلاق"
+      "close": "إغلاق",
+      "purchases": "المشتريات",
+      "frequentBuyer": "مشتري متكرر",
+      "newClient": "عميل جديد",
+      "userSerial": "الرقم التسلسلي للمستخدم"
     },
     "invites": {
       "invite": "دعوة",
@@ -87,13 +91,21 @@
       "exporting": "جاري التصدير...",
       "csvFormat": "تنسيق CSV",
       "jsonFormat": "تنسيق JSON",
+      "xlsxFormat": "تنسيق XLSX",
       "exportFiltered": "تصدير المفلتر",
       "exportCSVPage": "تصدير الصفحة (CSV)",
       "exportCSVAll": "تصدير الكل (CSV)",
       "exportJSONPage": "تصدير الصفحة (JSON)",
       "exportJSONAll": "تصدير الكل (JSON)",
       "exportXLSXPage": "تصدير الصفحة (XLSX)",
-      "exportXLSXAll": "تصدير الكل (XLSX)"
+      "exportXLSXAll": "تصدير الكل (XLSX)",
+      "csvPage": "تصدير الصفحة (CSV)",
+      "csvAll": "تصدير الكل (CSV)",
+      "jsonPage": "تصدير الصفحة (JSON)",
+      "jsonAll": "تصدير الكل (JSON)",
+      "xlsxPage": "تصدير الصفحة (XLSX)",
+      "xlsxAll": "تصدير الكل (XLSX)",
+      "successXLSX": "تم تصدير {{count}} مستخدم بنجاح (XLSX)"
     },
     "errors": {
       "fetchLecturers": "فشل في جلب المحاضرين",
@@ -190,8 +202,7 @@
       "phone": "رقم الهاتف",
       "name": "الاسم",
       "successfulInvites": "الدعوات الناجحة",
-      "purchases": "المشتريات",
-      "totalPaid": "إجمالي المدفوع"
+      "purchases": "المشتريات"
     },
 
     "pagination": {
@@ -401,7 +412,6 @@
     "administrationZone": "المنطقة الإدارية",
     "sequenceId": "الرقم التسلسلي",
     "purchases": "المشتريات",
-    "totalPaid": "إجمالي المدفوع",
     "joinedDate": "تاريخ الانضمام"
   },
 
