Revert "Merge branch 'test-prod' into dev"
This reverts commit 5740e5009ab69292d71b05460b32b5c5ba534ba8, reversing
changes made to d1ee792f84bcbdcf63161282320b94aebb7f5062.

--- a/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
@@ -99,16 +99,7 @@
     "noAdminNotes": "No admin notes added yet",
     "close": "Close",
     "receivedBy": "Received by",
-    "confirmedBy": "Confirmed by",
-    "new": "New",
-    "newClient": "New Client",
-    "frequentBuyer": "Frequent Buyer",
-    "returnOrder": "Return Order",
-    "return": "Return",
-    "returned": "Returned",
-    "returnedBy": "Returned by",
-    "deleteNotes": "Delete Notes",
-    "totalPurchases": "Total Purchases"
+    "confirmedBy": "Confirmed by"
   },
   "alerts": {
     "orderConfirmed": "Order confirmed successfully!",
