Initialize frontend application with routing, internationalization, and a new market page with its components.

--- a/kalima-platform/frontend/public/locales/ar/landing.json
+++ b/kalima-platform/frontend/public/locales/ar/landing.json
@@ -4,6 +4,7 @@
     "courses": "الكورسات",
     "teachers": "المعلمين",
     "services": "الخدمات",
+    "market": "المتجر",
     "pricing": "الأسعار",
     "login": "تسجيل الدخول",
     "signup": "إنشاء حساب",
