--- a/kalima-platform/frontend/public/locales/en/landing.json
+++ b/kalima-platform/frontend/public/locales/en/landing.json
@@ -4,6 +4,7 @@
     "courses": "Courses",
     "teachers": "Teachers",
     "services": "Services",
+    "market": "Market",
     "pricing": "Pricing",
     "login": "Log In",
     "signup": "Sign Up",
