feat(cart): add cart functionality with preview and page
- Added framer-motion for animations.
- Updated localization files for cart functionality in Arabic and English.
- Implemented CartPreview component for quick cart access.
- Created CartPage to display cart items, subtotal, and checkout options.
- Enhanced Navbar with cart toggle and item count.
- Integrated cart state management and quantity controls.
- Added UI components for cart interactions and order summary.

--- a/kalima-platform/frontend/public/locales/en/landing.json
+++ b/kalima-platform/frontend/public/locales/en/landing.json
@@ -7,7 +7,8 @@
     "pricing": "Pricing",
     "login": "Log In",
     "signup": "Sign Up",
-    "languageToggle": "العربية"
+    "languageToggle": "العربية",
+    "cartToggle": "Cart"
   },
   "footer": {
     "brand": "Kalima Platform",
