--- a/kalima-platform/frontend/public/locales/ar/landing.json
+++ b/kalima-platform/frontend/public/locales/ar/landing.json
@@ -7,7 +7,8 @@
     "pricing": "الأسعار",
     "login": "تسجيل الدخول",
     "signup": "إنشاء حساب",
-    "languageToggle": "English"
+    "languageToggle": "English",
+    "cartToggle": "السلة"
   },
   "footer": {
     "brand": "منصة كلمة",
