--- a/kalima-platform/frontend/public/locales/en/landing.json
+++ b/kalima-platform/frontend/public/locales/en/landing.json
@@ -9,7 +9,7 @@
     "login": "Log In",
     "signup": "Sign Up",
     "languageToggle": "العربية",
-    "cartToggle": "Cart"
+    "cartToggle": "Cart",
     "searchPlaceholder": "Type a command or search...",
     "searchButtonLong": "Search website...",
     "searchButtonShort": "Search...",
